--- a/FörberedelseUppgiftTest/index.html
+++ b/FörberedelseUppgiftTest/index.html
@@ -46,11 +46,11 @@ crossorigin="anonymous">
 
 <section class="tabs">
     <nav>
-        <a href="home.html"></a>
+        <a href="index.html"></a>
         <div class="my-tabs">
             <i class="fa fa-times"></i>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#aboutusID">Our offer</a></li>
                 <li><a href="#howdoesID">Why us</a></li>
                 <li><a href="contact.html">Contact</a></li>
