--- a/FörberedelseUppgiftTest/contact.html
+++ b/FörberedelseUppgiftTest/contact.html
@@ -28,13 +28,13 @@ crossorigin="anonymous">
 
 <section class="tabs-contact">
     <nav>
-        <a href="home.html"></a>
+        <a href="index.html"></a>
         <div class="my-tabs-contact">
             <i class="fa fa-times"></i>
             <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="home.html #aboutusID">Our offer</a></li>
-                <li><a href="home.html #howdoesID">Why us</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Our offer</a></li>
+                <li><a href="index.html">Why us</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
