--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="with=device-width, initial scale=1.0">
     <title> Förberedelseuppgift </title>
     <meta charset="UTF-8">
+    <link rel="icon" href="images/noun_abstract_327757.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
