--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,8 @@ crossorigin="anonymous">
             <i class="fa fa-times"></i>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="index.html">Our offer</a></li>
-                <li><a href="index.html">Why us</a></li>
+                <li><a href="index.html #aboutusID">Our offer</a></li>
+                <li><a href="index.html #howdoesID">Why us</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
